add some js logic

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
                 </div>
             </div>
         </div>
-        <button class="section__button buttonAdd" type="button">Добавить пункт</button>
+        <input type="text" class="addInput">
+        <button class="section__button addButton" type="button">Добавить пункт</button>
 
         
     </main>
