add LocalStorage saving

--- a/index.html
+++ b/index.html
@@ -12,32 +12,22 @@
     </header>
     <main class="main">
         <div class="section">
-            <div class="section__card card">
+            <div class="section__card card" id="user1">
                 <div class="card__name">Артур</div>
                 <img src="./img/avatar-1.png" alt="аватар" class="card__avatar">
-                <div class="card__list">
-                    <label><input type="checkbox"  class="card__item">Покормить собаку</label>
-                    <label><input type="checkbox"  class="card__item">Погулять с собакой</label>
-                    <label><input type="checkbox"  class="card__item">Погулять с Кусей</label>
-                    <label><input type="checkbox"  class="card__item">Обнять Кусю</label>
-                </div>
+                <div class="card__list"></div>
             </div>
             <div class="section__decor">
                 VS
             </div>
-            <div class="section__card card">
+            <div class="section__card card" id='user2'>
                 <div class="card__name">Куся</div>
                 <img src="./img/avatar-2.png" alt="" class="card__avatar">
-                <div class="card__list">
-                    <label><input type="checkbox"  class="card__item">Покормить собаку</label>
-                    <label><input type="checkbox"  class="card__item">Погулять с собакой</label>
-                    <label><input type="checkbox"  class="card__item">Погулять с Кусей</label>
-                    <label><input type="checkbox"  class="card__item">Обнять Кусю</label>
-                </div>
+                <div class="card__list"></div>
             </div>
         </div>
         <input type="text" class="addInput">
-        <button class="section__button addButton" type="button">Добавить пункт</button>
+        <button class="section__button addButton" type="button">Добавить квест</button>
 
         
     </main>
