added functionality to remove list items

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main class="main">
         <div class="section">
-            <div class="section__card card" id="user1">
+            <div class="section__card card">
                 <div class="card__name">Артур</div>
                 <img src="./img/avatar-1.png" alt="аватар" class="card__avatar">
                 <div class="card__list"></div>
@@ -20,7 +20,7 @@
             <div class="section__decor">
                 VS
             </div>
-            <div class="section__card card" id='user2'>
+            <div class="section__card card">
                 <div class="card__name">Куся</div>
                 <img src="./img/avatar-2.png" alt="" class="card__avatar">
                 <div class="card__list"></div>
