add user points

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <main class="main">
         <div class="section">
             <div class="section__card card">
+                Поинты: <span class="card__score">0</span>
                 <div class="card__name">Артур</div>
                 <img src="./img/avatar-1.png" alt="аватар" class="card__avatar">
                 <div class="card__list"></div>
@@ -21,6 +22,7 @@
                 VS
             </div>
             <div class="section__card card">
+                Поинты: <span class="card__score">0</span>
                 <div class="card__name">Куся</div>
                 <img src="./img/avatar-2.png" alt="" class="card__avatar">
                 <div class="card__list"></div>
