add method render to models

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <main class="main">
         <div class="section">
             <div class="section__card card">
-                Поинты: <span class="card__score">0</span>
+                <div class="card__score-label">
+                    Поинты: <span class="card__score">0</span>
+                </div>
                 <div class="card__name">Артур</div>
                 <img src="./img/avatar-1.png" alt="аватар" class="card__avatar">
                 <div class="card__list"></div>
